# eduferreyraok

.github/workflows/: main.yml  npm_release.yml  pypi_release.yml
npm/: README.md  package.json
pypi/: Cargo.toml  pyproject.toml
pypi/src/: lib.rs
pypi/src/eduferreyraok/: __init__.py
