[project]
name = "eduferreyraok"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Carlos Eduardo Ferreyra", email = "eduferreyraok@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
eduferreyraok = "eduferreyraok:main"

[tool.maturin]
module-name = "eduferreyraok._core"
python-packages = ["eduferreyraok"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
